<resources>
    <string name="app_name">Charge Control</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="review">Review</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About</string>
    <string name="temperature_in_f">Temperature in °F</string>
    <string name="temperature_in_c">Temperature in °C</string>
    <string name="close">Close</string>
    <string name="try_battery_alarm">TRY Battery Alarm</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="charging">Charging</string>
    <string name="discharging">Discharging</string>
    <string name="disable_threshold">Disable threshold</string>
    <string name="enable_threshold">Enable threshold</string>
    <string name="apply">Apply</string>
    <string name="themes">Themes</string>
    <string name="visit_store">Visit App Store?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="aboutInfo">
        \nRHS Dev built the Charge Control app. This app is free to use. This app is built over Input Power Control module available on Magisk. However it is intended to work on any su binary you use.
        \n\n<b>Privacy Policy</b>
        \nThis app do not require internet and does not collect any info.
        \n\n<b>Usage Policy</b>
        \nThis app is not built to harm your device and I do not want anyone to use it for that too. But if anything happens to your device me or the developer of the module won\'t be responsible.
    </string>
</resources>