<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10sp"
    android:background="@drawable/card_back"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:text="@string/visit_store"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/cancelTV"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:gravity="center"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="?attr/colorAccent"
                android:background="@drawable/btn_back"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>
            <TextView
                android:id="@+id/yesTV"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:gravity="center"
                android:layout_gravity="end"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="?attr/colorAccent"
                android:background="@drawable/btn_back"/>
    </LinearLayout>
</LinearLayout>