<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_main"
        app:title="Charge Control"
        app:titleTextColor="?attr/headerText" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/card_back_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/card_back"
                android:padding="16dp">

                <TextView
                    android:id="@+id/chargeStatusTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_power"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/chargeSpeedTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_speed"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/chargeTempTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_hot"
                    android:gravity="center" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/chargeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="8dp"
                    android:elevation="1dp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <eo.view.batterymeter.BatteryMeterView
                    android:id="@+id/batteryMeterView"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:rotation="90"
                    app:batteryMeterColor="?attr/colorAccent"
                    app:batteryMeterIndicatorColor="@android:color/transparent"
                    app:batteryMeterIsCharging="false"
                    app:batteryMeterTheme="rounded" />

                <TextView
                    android:id="@+id/statusIconTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:drawableTop="@drawable/ic_lock"
                    android:textColor="?attr/colorAccent" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/card_back"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/disable_threshold" />

                    <TextView
                        android:id="@+id/stopChargingTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="--"
                        android:textColor="?attr/colorAccent"
                        android:textSize="16sp" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/stopChargingSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@null"
                    android:max="60"
                    android:progressDrawable="@drawable/seek_bar"
                    android:splitTrack="false"
                    android:thumb="@drawable/seek_bar_thumb" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/enable_threshold" />

                    <TextView
                        android:id="@+id/startChargingTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="--"
                        android:textColor="?attr/colorAccent"
                        android:textSize="16sp" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/startChargingSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@null"
                    android:max="69"
                    android:progressDrawable="@drawable/seek_bar"
                    android:splitTrack="false"
                    android:thumb="@drawable/seek_bar_thumb" />

                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/set_back"
                    android:text="@string/apply"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorAccent" />

                <Button
                    android:id="@+id/btnAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/set_back"
                    android:textAllCaps="false"
                    android:textColor="?attr/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <FrameLayout
        android:id="@+id/aboutFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:onClick="onCancelClick"
        android:visibility="gone">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aboutCL"
            android:layout_gravity="bottom"
            android:background="@drawable/bottomsheet_back">

            <TextView
                android:id="@+id/headingTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/about"
                android:textColor="?attr/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="254dp"
                android:background="@drawable/card_back"
                app:layout_constraintBottom_toTopOf="@+id/tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headingTV">
                <TextView
                    android:id="@+id/aboutTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:text="@string/aboutInfo" />
            </androidx.core.widget.NestedScrollView>
            <TextView
                android:id="@+id/tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_unbounded"
                android:elevation="0dp"
                android:gravity="center"
                android:onClick="onCancelClick"
                android:padding="12dp"
                android:text="@string/ok"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="?attr/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>